--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "xinzhong yu",
   "license": "ISC",
   "dependencies": {
     "node-forge": "^0.10.0"
